--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 Anchorage, AK 99501">
 <meta name="data-map" content="1219+U+St,+Anchorage,+AK+99501">
   <meta name="description" content="We are a 501(c)(3) organization advancing community services, education, and direct relief through transparent programs, local partnerships, and measurable outcomes.">
+<meta name="facebook-domain-verification" content="8xu5scaqj8z6to316scxlgbg5gbx87" />
 </head>
 <body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
